<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:padding="20dp"
    tools:context="ba.etf.rma22.projekat.UpisIstrazivanje">

        <Spinner
            android:id="@+id/odabirGodina"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:entries="@array/godine"
            />

    <Spinner
        android:id="@+id/odabirIstrazivanja"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
    android:layout_weight="1" />

    <Spinner
        android:id="@+id/odabirGrupa"
        android:outlineAmbientShadowColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_weight="1"

        />

    <Button
        android:id="@+id/dodajIstrazivanjeDugme"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/teal_200"
        android:text="Upisi me"
        android:clickable="true"
        android:enabled="false"
        android:textColor="@color/black" />

</LinearLayout>