<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ba.etf.rma22.projekat.view.FragmentPitanje"
    android:padding="15dp"
    >

    <TextView
        android:id="@+id/tekstPitanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="Pitanje"
        android:textColor="@color/black"
        android:textSize="30sp"
        />
    <ListView
        android:id="@+id/odgovoriLista"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@+id/tekstPitanja"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/dugmeZaustavi"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/odgovoriLista"
        android:layout_marginTop="30dp"
        android:text="Zaustavi"
        android:backgroundTint="@color/teal_200"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>